--- a/sale.html
+++ b/sale.html
@@ -21,33 +21,33 @@
         <h1 class="menu_title">ラインナップ</h1>
       </div>
       <ul class="menu_list coffee_menu">
-        <li class="caffee_menu_list_item">
-          <div class="caffee_menu_content">
+        <li class="coffee_menu_list_item">
+          <div class="coffee_menu_content">
             <h2 class="menu_item_title">オリジナルブレンド200g</h2>
-            <p class="caffee_menu_price">500円</p>
+            <p class="coffee_menu_price">500円</p>
           </div>
-          <img src="images/sample_cafe1.jpg" class="caffee_menu_image" />
+          <img src="images/sample_cafe1.jpg" class="coffee_menu_image" />
         </li>
-        <li class="caffee_menu_list_item">
-          <div class="caffee_menu_content">
+        <li class="coffee_menu_list_item">
+          <div class="coffee_menu_content">
             <h2 class="menu_item_title">オリジナルブレンド500g</h2>
-            <p class="caffee_menu_price">900円</p>
+            <p class="coffee_menu_price">900円</p>
           </div>
-          <img src="images/sample_cafe1.jpg" class="caffee_menu_image" />
+          <img src="images/sample_cafe1.jpg" class="coffee_menu_image" />
         </li>
-        <li class="caffee_menu_list_item">
-          <div class="caffee_menu_content">
+        <li class="coffee_menu_list_item">
+          <div class="coffee_menu_content">
             <h2 class="menu_item_title">スペシャルブレンド200g</h2>
-            <p class="caffee_menu_price">700円</p>
+            <p class="coffee_menu_price">700円</p>
           </div>
-          <img src="images/sample_cafe3.jpg" class="caffee_menu_image" />
+          <img src="images/sample_cafe3.jpg" class="coffee_menu_image" />
         </li>
-        <li class="caffee_menu_list_item">
-          <div class="caffee_menu_content">
+        <li class="coffee_menu_list_item">
+          <div class="coffee_menu_content">
             <h2 class="menu_item_title">スペシャルブレンド500g</h2>
-            <p class="caffee_menu_price">1200円</p>
+            <p class="coffee_menu_price">1200円</p>
           </div>
-          <img src="images/sample_cafe3.jpg" class="caffee_menu_image" />
+          <img src="images/sample_cafe3.jpg" class="coffee_menu_image" />
         </li>
       </ul>
       <h2>送料のご案内</h2>
@@ -71,7 +71,7 @@
             <option value="1200">スペシャルブレンド500g 1200円</option>
           </select>
           <p>数量を選択してください</p>
-          <input type="number" min="1" max="5" id="number" required />
+          <input type="number" min="1" max="5" id="quantity" required />
         </div>
         <br />
         <input type="button" class="btn" value="合計金額" onclick="calc()" />
