Take window.alert() out from addToCart()

--- a/sale.html
+++ b/sale.html
@@ -74,7 +74,12 @@
           <input type="number" min="1" max="5" id="quantity" required />
         </div>
         <br />
-        <input type="button" class="btn" value="追加" onclick="addToCart()" />
+        <input
+          type="button"
+          class="btn"
+          value="追加"
+          onclick="showItemsInCart()"
+        />
         <input type="button" class="btn" value="合計金額" onclick="calc()" />
       </form>
     </section>
