--- a/sale.html
+++ b/sale.html
@@ -96,7 +96,7 @@
         <input
           type="button"
           class="btn"
-          value="追加"
+          value="追加する"
           onclick="showItemsInCart()"
         />
         <input type="button" class="btn" value="合計金額" onclick="calc()" />
