--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="#" class="global_nav_item">
             <li>Menu</li>
           </a>
-          <a href="contact.html" class="global_nav_item">
+          <a href="validation.html" class="global_nav_item">
             <li>Contact</li>
           </a>
         </ul>
