Modify link of contact

--- a/validation.html
+++ b/validation.html
@@ -25,7 +25,7 @@
           <a href="#" class="global_nav_item">
             <li>Menu</li>
           </a>
-          <a href="contact.html" class="global_nav_item">
+          <a href="validation.html" class="global_nav_item">
             <li>Contact</li>
           </a>
         </ul>
@@ -72,7 +72,6 @@
         </div>
       </form>
     </section>
-    <script type="text/javascript" src="javascripts/validation.js"></script>
     <footer class="footer">
       <nav class="footer_nav">
         <div class="footer_nav_line">
@@ -96,5 +95,6 @@
         >
       </nav>
     </footer>
+    <script type="text/javascript" src="javascripts/validation.js"></script>
   </body>
 </html>
