--- a/sample.html
+++ b/sample.html
@@ -6,10 +6,23 @@
   </head>
   <body>
     <div id="parent">
-      <h1>JavaScriptの学習</h1>
+      <h1 class="title">JavaScriptの学習</h1>
       <button id="btn">ターゲット</button>
       <a href="https://www.google.com" id="link">Link</a>
     </div>
+    <style>
+      .title {
+        color: red;
+      }
+      .background_pink {
+        background: pink;
+      }
+    </style>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
     <script type="text/javascript" src="javascripts/sample.js"></script>
   </body>
 </html>
