Add dropdown to validation.html

--- a/sample.html
+++ b/sample.html
@@ -8,6 +8,7 @@
     <div id="parent">
       <h1 class="title">JavaScriptの学習</h1>
       <button id="btn">ターゲット</button>
+      <p id="message" class="display_none">The button has been clicked!</p>
       <a href="https://www.google.com" id="link">Link</a>
     </div>
     <style>
@@ -16,6 +17,9 @@
       }
       .background_pink {
         background: pink;
+      }
+      .display_none {
+        display: none;
       }
     </style>
     <script
