--- a/validation.html
+++ b/validation.html
@@ -13,25 +13,23 @@
     />
   </head>
   <body>
-    <header id="top">
-      <nav class="header_nav">
-        <a href="index.html" class="logo"
-          ><img src="images/sample_logo_k.png"
-        /></a>
-        <ul class="global_nav">
-          <a href="index.html" class="global_nav_item">
+    <nav class="header_nav">
+      <div>
+        <button class="drop_menu_btn" id="drop_menu_btn">メニュー</button>
+        <ul class="drop_menu" id="drop_menu">
+          <a href="#" class="drop_menu_item">
             <li>Home</li>
           </a>
-          <a href="#" class="global_nav_item">
+          <a href="#" class="drop_menu_item">
             <li>Menu</li>
           </a>
-          <a href="validation.html" class="global_nav_item">
+          <a href="#" class="drop_menu_item">
             <li>Contact</li>
           </a>
         </ul>
-      </nav>
-      <div class="section_inner"></div>
-    </header>
+      </div>
+    </nav>
+    <div class="section_inner"></div>
     <section class="section_inner">
       <div class="section_title">
         <h1>CONTACT</h1>
@@ -95,6 +93,11 @@
         >
       </nav>
     </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
     <script type="text/javascript" src="javascripts/validation.js"></script>
   </body>
 </html>
