--- a/validation.html
+++ b/validation.html
@@ -99,5 +99,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="javascripts/validation.js"></script>
+    <script type="text/javascript" src="javascripts/drop_menu.js"></script>
   </body>
 </html>
