Implement drop down animation

--- a/validation.html
+++ b/validation.html
@@ -16,7 +16,7 @@
     <nav class="header_nav">
       <div>
         <button class="drop_menu_btn" id="drop_menu_btn">メニュー</button>
-        <ul class="drop_menu" id="drop_menu">
+        <ul class="drop_menu display_none" id="drop_menu">
           <a href="#" class="drop_menu_item">
             <li>Home</li>
           </a>
